Pdf update and claim profile

--- a/src/client-profile/claim-1.html
+++ b/src/client-profile/claim-1.html
@@ -124,7 +124,7 @@
                             <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">Sorry to hear about this, Which of your vehicles was involved</h3>
+                        <h3 class="title text-center">Sorry to hear about this, Which of your vehicles was involved</h3>
                         
                         <div class="contain-wrapper-sm">
                             <form class="mt-4">
@@ -136,10 +136,10 @@
 
                                             <div class="col-12">
                                                 <div class="f-group max-width-100">
-                                                    <label class="text-center fw-normal">Select the which was involded </label>
+                                                    <label class="text-center mb-4 fw-normal">Select the which was involded </label>
                                                     <div class="f-dropdown selectDropdown">
                                                         <select class="f-control f-dropdown"
-                                                            placeholder="Select the type of ownership"
+                                                            placeholder="Select the Vehicle"
                                                             id="1">
                                                             <option value="">Select the Vehicle</option>
                                                             <option value="1">First
