--- a/src/client-profile/claim-11.html
+++ b/src/client-profile/claim-11.html
@@ -168,7 +168,7 @@
                                             My Fault
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes glass-squaresmb-0" for="not-sure">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="not-sure">
                                         <input class="checkbox-control" type="radio" name="fault" value="" id="not-sure">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-14">
