--- a/src/client-profile/claim-13.html
+++ b/src/client-profile/claim-13.html
@@ -145,7 +145,7 @@
                             </p>
                         </div>
                         <h3 class="title  text-center">Tell me briefly what happened,</h3>
-                        <label class="text-center fw-normal mt-3">Just very short & clear we will get more details later</label>
+                        <label class="text-center title fw-normal mt-3">Just very short & clear we will get more details later</label>
 
                         <form class="mt-4">
                             <div class="contain-wrapper-sm">
