--- a/src/client-profile/claim-15.html
+++ b/src/client-profile/claim-15.html
@@ -145,7 +145,7 @@
                             </p>
                         </div>
                         <h3 class="title  text-center">Who was driving your vehicle</h3>
-                        <label class="text-center fw-normal mt-3">Share the detail of driver who drive your vehicle</label>
+                        <label class="text-center title fw-normal mt-3">Share the detail of driver who drive your vehicle</label>
 
                         <form class="mt-4">
                             <div class="contain-wrapper-sm">
@@ -187,6 +187,34 @@
                                         <div class="col-md-4 mt-md-0">
                                             <div class="form-group">
                                                 <input type="text" placeholder="Driver License Number" class="form-control">
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-md-6">
+                                            <div class="input-group date form-control px-0" id="datepicker1">
+                                                <input type="date" class="" id="date" placeholder="Date of birth (DD/MM/YYYY)" />
+                                                <span class="input-group-append ">
+                                                    <span class="input-group-text border-0 bg-white d-block">
+                                                        <img class="" width="20px" src="../images/calender-icon.svg">
+                                                    </span>
+                                                </span>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <div class="f-dropdown selectDropdown">
+                                                    <select class="f-control f-dropdown" placeholder="Select State"
+                                                        id="1">
+                                                        <option value="" hidden>Select State</option>
+                                                        <option value="1">First
+                                                        </option>
+                                                        <option value="2">Second
+                                                        </option>
+                                                        <option value="3">Rented
+                                                        </option>
+                                                    </select>
+                                                </div>
                                             </div>
                                         </div>
 
