--- a/src/client-profile/claim-4.html
+++ b/src/client-profile/claim-4.html
@@ -149,29 +149,29 @@
                         <form class="mt-4">
                             <div class="container-wrapper-md">
                                 <div class="d-flex flex-wrap justify-content-center claim-section ">
-                                    <label class="checkbox-inline squar-boxes glass-squares mb-0" for="front">
-                                        <input class="checkbox-control" type="checkbox" value="" id="front" checked>
+                                    <label class="checkbox-inline squar-boxes mb-0" for="front">
+                                        <input class="checkbox-control" type="radio" name="glass-damage" value="" id="front" checked>
                                         <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-14">
+                                        <span class="checkbox-label">
                                             <img src="../images/claim-icons/Front-Windshield_active.svg" alt="" class="active" />
                                             <img src="../images/claim-icons/Front-Windshield_inactive.svg" alt="" class="offline" />
                                             Front Windshield
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes glass-squares  no-square  mb-0" for="rear">
-                                        <input class="checkbox-control" type="checkbox" value="" id="rear" checked>
+                                    <label class="checkbox-inline squar-boxes mb-0" for="rear">
+                                        <input class="checkbox-control" type="radio" value="" id="rear" checked>
                                         <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-14">
+                                        <span class="checkbox-label">
                                             <img src="../images/claim-icons/Rear-Windshield_active.svg" alt=""
                                                 class="active" />
                                             <img src="../images/claim-icons/Rear-Windshield_inactive.svg" alt="" class="offline" />
                                             Rear Windshield
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes glass-squaresmb-0" for="side-window">
-                                        <input class="checkbox-control" type="checkbox" value="" id="side-window">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="side-window">
+                                        <input class="checkbox-control" type="radio" value="" id="side-window">
                                         <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-14">
+                                        <span class="checkbox-label">
 
                                             <img src="../images/claim-icons/Side-Windows_active.svg" alt=""
                                                 class="active" />
@@ -180,10 +180,10 @@
                                                 Side Windows
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes glass-squaresmb-0" for="mirror">
-                                        <input class="checkbox-control" type="checkbox" value="" id="mirror" checked>
+                                    <label class="checkbox-inline squar-boxes mb-0" for="mirror">
+                                        <input class="checkbox-control" type="radio" value="" id="mirror" checked>
                                         <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-14">
+                                        <span class="checkbox-label">
 
                                             <img src="../images/claim-icons/Mirrors_active.svg" alt=""
                                                 class="active" />
