--- a/src/client-profile/claim-7.html
+++ b/src/client-profile/claim-7.html
@@ -174,7 +174,7 @@
                                 </div>
                             </div>
 
-                            <div class="contain-wrapper-sm">
+                            <div class="contain-wrapper-sm position-relative z-index-2">
                                 <div class="container-fluid claim-additional-info mt-4 bg-white border border-1">
                                     <div class="row g-3">
                                         <div class="col-md-12 col-12">
