--- a/src/client-profile/claim-8.html
+++ b/src/client-profile/claim-8.html
@@ -149,7 +149,7 @@
                         <form class="mt-4">
                             <div class="container-wrapper-md">
                                 <div class="d-flex flex-wrap justify-content-center claim-section ">
-                                    <label class="checkbox-inline squar-boxes glass-squares mb-0" for="Yes">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="Yes">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="Yes" checked>
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-14">
@@ -158,7 +158,7 @@
                                             Yes
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes glass-squares  no-square  mb-0" for="No">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="No">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="No">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-14">
@@ -168,7 +168,7 @@
                                             No
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes glass-squaresmb-0" for="repaired">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="repaired">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="repaired">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-14">
