--- a/src/pdf-forms/binder-img.html
+++ b/src/pdf-forms/binder-img.html
@@ -194,6 +194,12 @@
             top: 27px;
         }
 
+        .page-details.binders-pdf .certificate-holder-section .a3.a3-5 input {
+            width: 160px;
+            margin-top: -2px;
+            left: 20px;
+        }
+
         .page-details.binders-pdf .certificate-holder-section .a4 {
             left: 430px;
             top: 36px;
@@ -312,6 +318,14 @@
             left: 10px;
             height: 57px;
         }
+
+        .page-details.binders-pdf .coverage-section .a11 {
+            top: 500px;
+            width: 445px;
+            left: -100px;
+            height: 44px;
+        }
+
 
         .page-details.binders-pdf .description-operation-section {
             top: 200px;
@@ -784,13 +798,14 @@ Fall River, MA 02721
 
 
             <div class="policy-table policy-type">
-
                 <div class="answer a1 a1-5 other-true"><span class="check-mark"><input type="text" value="Anthing"
                             id="a4-other"></span></div>
                 <div class="answer a1 gl-5 genral-limits other-true"><span class="check-mark"><input type="text"
                             value="Anthing" id="a1-other"></span></div>
                 <div class="answer a2 a2-7 other-true"><span class="check-mark"><input type="text" value="Anthing"
                             id="a2-other"></span></div>
+                <div class="answer a3 a3-1 other-true"><span class="check-mark"><input type="text" value="10000"
+                            id="a3-other"></span></div>
                 <div class="answer a3 a3-2 other-true"><span class="check-mark"><input type="text" value="10000"
                             id="a3-other"></span></div>
                 <div class="answer a4 a4-2 other-true"><span class="check-mark"><input type="text" value="10000"
@@ -898,8 +913,14 @@ FALL RIVER MA 0277
                         </textarea>
                 </div>
 
-
                 <div class="answer a10">
+                    <textarea class="form-control">City Of Boston
+                        7 BRAYTON AVE
+                        FALL RIVER MA 0277
+                        </textarea>
+                </div>
+
+                <div class="answer a11">
                     <textarea class="form-control">City Of Boston
                         7 BRAYTON AVE
                         FALL RIVER MA 0277
@@ -969,8 +990,8 @@ FALL RIVER MA 0277
 </textarea>
                 </div>
 
-                <div class="answer a3 a3-1">
-                    <span class="check-mark"></span>
+                <div class="answer a3 a3-5">
+                    <span class="check-mark other-true"><input type="text" value="Anything" id="a4-other"></span>
                 </div>
                 <div class="answer a4">
                     <input type="text" value="100000" />
