--- a/src/client-profile/claim-17.html
+++ b/src/client-profile/claim-17.html
@@ -145,7 +145,7 @@
                             </p>
                         </div>
                         <h3 class="title  text-center">Do you want to go through their Insurance or Yours?</h3>
-                        <label class="text-center fw-normal mt-3">
+                        <label class="text-center title fw-normal mt-3">
                             You don't have rental car coverage for this vehicle, We can go through your insurance but you will not get a rental car.<br>
 We can go through the other person’s insurance , but the other company has to accept fault, then they will pay for your rental car  
                         </label>
@@ -153,7 +153,7 @@ We can go through the other person’s insurance , but the other company has to 
                         <form class="mt-4">
                             <div class="container-wrapper-md">
                                 <div class="d-flex flex-wrap justify-content-center claim-section ">
-                                    <label class="checkbox-inline squar-boxes glass-squares mb-0" for="Yes">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="Yes">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="Yes" checked>
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-14">
@@ -162,7 +162,7 @@ We can go through the other person’s insurance , but the other company has to 
                                             Use My Insurance
                                         </span>
                                     </label>
-                                    <label class="checkbox-inline squar-boxes glass-squares mb-0" for="No">
+                                    <label class="checkbox-inline squar-boxes mb-0" for="No">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="No">
                                         <span class="checkbox-custom"></span>
                                         <span class="checkbox-label fs-14">
